# EMME

./: .clang-format  .gitignore  CMakeLists.txt  DedicatedThreadPool.h  Grid.h  JsonParser.cpp  JsonParser.h  Makefile  Matrix.h  Parameters.cpp  Parameters.h  README.md  aligned-allocator.hpp  build_info.sh  emme.in  emme.in.example  emme_stellarator.in  function.cpp  function.h  functions.h  input-example.json  input-stellarator-example.json  main.cpp  singularity_handler.cpp  singularity_handler.h  solver.cpp  solver.h
include/: Arithmetics.h  DedicatedThreadPool.h  JsonParser.h  Matrix.h  Parameters.h  Timer.h  aligned-allocator.h  functions.h  singularity_handler.h  solver.h  solver_pic.h
src/: JsonParser.cpp  Parameters.cpp  Timer.cpp  functions.cpp  main.cpp  solver.cpp
test/: .gitignore  Makefile  test.json  test_integrator.cpp  test_json.cpp
